// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`latestVersionFilter latestVersionFilter should return false if its an old version of the article 1`] = `false`;

exports[`latestVersionFilter latestVersionFilter should return true if its the newer version of the article 1`] = `true`;

exports[`should clean an AST tree 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "categorisation": undefined,
                    "cid": "311",
                    "content": undefined,
                    "dateParution": undefined,
                    "etat": "VIGUEUR",
                    "historique": undefined,
                    "id": "311",
                    "intOrdre": undefined,
                    "lstLienModification": undefined,
                    "modifDate": undefined,
                    "num": undefined,
                    "shortTitle": undefined,
                    "surtitre": undefined,
                    "title": undefined,
                  },
                  "type": "article",
                },
              ],
              "data": Object {
                "categorisation": undefined,
                "cid": "KALISCTA311",
                "content": undefined,
                "dateParution": undefined,
                "etat": "VIGUEUR",
                "historique": undefined,
                "id": "KALISCTA311",
                "intOrdre": 311,
                "lstLienModification": undefined,
                "modifDate": undefined,
                "num": undefined,
                "shortTitle": undefined,
                "surtitre": undefined,
                "title": "title311",
              },
              "type": "section",
            },
          ],
          "data": Object {
            "categorisation": undefined,
            "cid": "KALISCTA31",
            "content": undefined,
            "dateParution": undefined,
            "etat": "VIGUEUR",
            "historique": undefined,
            "id": "KALISCTA31",
            "intOrdre": 31,
            "lstLienModification": undefined,
            "modifDate": undefined,
            "num": undefined,
            "shortTitle": undefined,
            "surtitre": undefined,
            "title": "title3",
          },
          "type": "section",
        },
      ],
      "data": Object {
        "categorisation": undefined,
        "cid": "KALISCTA3",
        "content": undefined,
        "dateParution": undefined,
        "etat": "VIGUEUR",
        "historique": undefined,
        "id": "KALISCTA3",
        "intOrdre": 1111,
        "lstLienModification": undefined,
        "modifDate": undefined,
        "num": undefined,
        "shortTitle": undefined,
        "surtitre": undefined,
        "title": "title3",
      },
      "type": "section",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "categorisation": undefined,
                    "cid": "2113",
                    "content": undefined,
                    "dateParution": undefined,
                    "etat": "VIGUEUR_NON_ETEN",
                    "historique": undefined,
                    "id": "2113",
                    "intOrdre": 7,
                    "lstLienModification": undefined,
                    "modifDate": undefined,
                    "num": undefined,
                    "shortTitle": undefined,
                    "surtitre": undefined,
                    "title": undefined,
                  },
                  "type": "article",
                },
                Object {
                  "data": Object {
                    "categorisation": undefined,
                    "cid": "2112",
                    "content": undefined,
                    "dateParution": undefined,
                    "etat": "VIGUEUR_NON_ETEN",
                    "historique": undefined,
                    "id": "2112",
                    "intOrdre": 55,
                    "lstLienModification": undefined,
                    "modifDate": undefined,
                    "num": undefined,
                    "shortTitle": undefined,
                    "surtitre": undefined,
                    "title": undefined,
                  },
                  "type": "article",
                },
                Object {
                  "data": Object {
                    "categorisation": undefined,
                    "cid": "2111",
                    "content": undefined,
                    "dateParution": undefined,
                    "etat": "VIGUEUR_NON_ETEN",
                    "historique": undefined,
                    "id": "2111",
                    "intOrdre": 555,
                    "lstLienModification": undefined,
                    "modifDate": undefined,
                    "num": undefined,
                    "shortTitle": undefined,
                    "surtitre": undefined,
                    "title": undefined,
                  },
                  "type": "article",
                },
              ],
              "data": Object {
                "categorisation": undefined,
                "cid": "KALISCTA211",
                "content": undefined,
                "dateParution": undefined,
                "etat": "VIGUEUR",
                "historique": undefined,
                "id": "KALISCTA211",
                "intOrdre": 211,
                "lstLienModification": undefined,
                "modifDate": undefined,
                "num": undefined,
                "shortTitle": undefined,
                "surtitre": undefined,
                "title": "title2",
              },
              "type": "section",
            },
            Object {
              "data": Object {
                "categorisation": undefined,
                "cid": "211",
                "content": undefined,
                "dateParution": undefined,
                "etat": "VIGUEUR_ETEN",
                "historique": undefined,
                "id": "211",
                "intOrdre": undefined,
                "lstLienModification": undefined,
                "modifDate": undefined,
                "num": undefined,
                "shortTitle": undefined,
                "surtitre": undefined,
                "title": undefined,
              },
              "type": "article",
            },
            Object {
              "data": Object {
                "categorisation": undefined,
                "cid": "212",
                "content": undefined,
                "dateParution": undefined,
                "etat": "VIGUEUR_NON_ETEN",
                "historique": undefined,
                "id": "212",
                "intOrdre": undefined,
                "lstLienModification": undefined,
                "modifDate": undefined,
                "num": undefined,
                "shortTitle": undefined,
                "surtitre": undefined,
                "title": undefined,
              },
              "type": "article",
            },
          ],
          "data": Object {
            "categorisation": undefined,
            "cid": "KALISCTA21",
            "content": undefined,
            "dateParution": undefined,
            "etat": "VIGUEUR",
            "historique": undefined,
            "id": "KALISCTA21",
            "intOrdre": 21,
            "lstLienModification": undefined,
            "modifDate": undefined,
            "num": undefined,
            "shortTitle": undefined,
            "surtitre": undefined,
            "title": "title2-1",
          },
          "type": "section",
        },
      ],
      "data": Object {
        "categorisation": undefined,
        "cid": "KALISCTA2",
        "content": undefined,
        "dateParution": undefined,
        "etat": "VIGUEUR",
        "historique": undefined,
        "id": "KALISCTA2",
        "intOrdre": 2222,
        "lstLienModification": undefined,
        "modifDate": undefined,
        "num": undefined,
        "shortTitle": undefined,
        "surtitre": undefined,
        "title": "title2",
      },
      "type": "section",
    },
  ],
  "data": Object {
    "categorisation": Array [
      "categorie",
    ],
    "cid": undefined,
    "content": undefined,
    "dateParution": undefined,
    "etat": "VIGUEUR",
    "historique": undefined,
    "id": "1",
    "intOrdre": 1,
    "lstLienModification": undefined,
    "modifDate": undefined,
    "num": 292,
    "shortTitle": "categorie",
    "surtitre": undefined,
    "title": "title",
  },
  "type": "convention collective",
}
`;

exports[`should convert structure to AST tree 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "cid": "2111",
                    "etat": "VIGUEUR_NON_ETEN",
                    "id": "2111",
                    "intOrdre": 555,
                  },
                  "type": "article",
                },
                Object {
                  "data": Object {
                    "cid": "2112",
                    "etat": "VIGUEUR_NON_ETEN",
                    "id": "2112",
                    "intOrdre": 55,
                  },
                  "type": "article",
                },
                Object {
                  "data": Object {
                    "cid": "2113",
                    "etat": "VIGUEUR_NON_ETEN",
                    "id": "2113",
                    "intOrdre": 7,
                  },
                  "type": "article",
                },
                Object {
                  "data": Object {
                    "cid": "2114",
                    "etat": "ABROGE",
                    "id": "2114",
                    "intOrdre": 8,
                  },
                  "type": "article",
                },
              ],
              "data": Object {
                "cid": "KALISCTA211",
                "etat": "VIGUEUR",
                "id": "KALISCTA211",
                "intOrdre": 211,
                "title": "title2",
              },
              "type": "section",
            },
            Object {
              "data": Object {
                "cid": "211",
                "etat": "VIGUEUR_ETEN",
                "id": "211",
              },
              "type": "article",
            },
            Object {
              "data": Object {
                "cid": "212",
                "etat": "VIGUEUR_NON_ETEN",
                "id": "212",
              },
              "type": "article",
            },
            Object {
              "data": Object {
                "cid": "213",
                "etat": "MODIFIE",
                "id": "213",
              },
              "type": "article",
            },
          ],
          "data": Object {
            "cid": "KALISCTA21",
            "etat": "VIGUEUR",
            "id": "KALISCTA21",
            "intOrdre": 21,
            "title": "title2-1",
          },
          "type": "section",
        },
      ],
      "data": Object {
        "cid": "KALISCTA2",
        "etat": "VIGUEUR",
        "id": "KALISCTA2",
        "intOrdre": 2222,
        "title": "title2",
      },
      "type": "section",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "data": Object {
                    "cid": "311",
                    "etat": "VIGUEUR",
                    "id": "311",
                  },
                  "type": "article",
                },
              ],
              "data": Object {
                "cid": "KALISCTA311",
                "etat": "VIGUEUR",
                "id": "KALISCTA311",
                "intOrdre": 311,
                "title": "title311",
              },
              "type": "section",
            },
          ],
          "data": Object {
            "cid": "KALISCTA31",
            "etat": "VIGUEUR",
            "id": "KALISCTA31",
            "intOrdre": 31,
            "title": "title3",
          },
          "type": "section",
        },
        Object {
          "children": Array [
            Object {
              "data": Object {
                "cid": "321",
                "id": "321",
              },
              "type": "article",
            },
          ],
          "data": Object {
            "cid": "KALISCTA32",
            "etat": "VIGUEUR",
            "id": "KALISCTA32",
            "intOrdre": 32,
            "title": "title32",
          },
          "type": "section",
        },
        Object {
          "data": Object {
            "cid": "31",
            "id": "3",
          },
          "type": "article",
        },
      ],
      "data": Object {
        "cid": "KALISCTA3",
        "etat": "VIGUEUR",
        "id": "KALISCTA3",
        "intOrdre": 1111,
        "title": "title3",
      },
      "type": "section",
    },
  ],
  "data": Object {
    "categorisation": Array [
      "categorie",
    ],
    "etat": "VIGUEUR",
    "id": "1",
    "intOrdre": 1,
    "num": 292,
    "shortTitle": "categorie",
    "title": "title",
  },
  "type": "convention collective",
}
`;
